--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
+<meta charset="utf-8">
+<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -12,11 +12,11 @@
 <header>
 	<div>app.creation</div>
 	<nav>
-		<a href="">start</a>
-		<a href="">servicse</a>
-		<a href="">about</a>
-		<a href="">blog</a>
-		<a href="">contact us</a>
+		<a href=#>start</a>
+		<a href=#>servicse</a>
+		<a href=#>about</a>
+		<a href=#>blog</a>
+		<a href=#>contact us</a>
 	</nav>
 </header>
 <section>
