--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -7,11 +7,11 @@
 <header>
 	<div>app.creation</div>
 	<nav>
-		<a href="">start</a>
-		<a href="">servicse</a>
-		<a href="">about</a>
-		<a href="">blog</a>
-		<a href="">contact us</a>
+		<a href=#>start</a>
+		<a href=#>servicse</a>
+		<a href=#>about</a>
+		<a href=#>blog</a>
+		<a href=#>contact us</a>
 	</nav>
 </header>
 <section>
